--- a/src/components/course-manager/course-manager.css
+++ b/src/components/course-manager/course-manager.css
@@ -13,3 +13,10 @@
 .wbdv-padding-15px {
     padding: 15px;
 }
+
+.wbdv-bottom-right-button{
+    position: fixed;
+    bottom: 2%;
+    right: 2%;
+    z-index: 2;
+}
